@@ -87,9 +87,6 @@ Flag Quvi
 Flag Tahoe
   Description: Enable the tahoe special remote
 
-Flag CryptoHash
-  Description: Enable use of cryptohash for checksumming
-
 Flag DesktopNotify
   Description: Enable desktop environment notifications
 
@@ -112,7 +109,8 @@ Executable git-annex
    base (>= 4.5 && < 4.9), monad-control, exceptions (>= 0.6), transformers,
    IfElse, text, QuickCheck >= 2.1, bloomfilter, edit-distance,
    SafeSemaphore, uuid, random, dlist, unix-compat, async, stm (>= 2.3),
-   data-default, case-insensitive, http-conduit, http-types
+   data-default, case-insensitive, http-conduit, http-types,
+   cryptohash (>= 0.10.0)
   CC-Options: -Wall
   GHC-Options: -Wall
   Extensions: PackageImports
@@ -148,10 +146,6 @@ Executable git-annex
     CPP-Options: -DWITH_TDFA
   else
     Build-Depends: regex-compat
-  
-  if flag(CryptoHash)
-    Build-Depends: cryptohash (>= 0.10.0)
-    CPP-Options: -DWITH_CRYPTOHASH
 
   if flag(S3)
     Build-Depends: conduit, resourcet, conduit-extra, aws (>= 0.9.2), http-client
